--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -295,7 +295,26 @@ li {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   margin-bottom: 1.5rem;
-  margin-top: 2.5rem;
+}
+
+h1 {
+  margin-top: 5.0rem;
+}
+
+h2 {
+  margin-top: 4.0rem;
+}
+
+h3 {
+  margin-top: 3.0rem;
+}
+
+h4, h5, h6 {
+  margin-top: 2.0rem;
+}
+
+hr {
+    margin-top: 4.0rem;
 }
 
 h1:first-child, h2:first-child, h3:first-child {
