--- a/layouts/shortcodes/carousel.html
+++ b/layouts/shortcodes/carousel.html
@@ -53,7 +53,7 @@ EXAMPLES:
   {{/* Create unique carousel ID */}}
   {{ $carouselID := printf "carousel-%d" .Ordinal }}
   
-  <div id="{{ $carouselID }}" class="carousel slide">
+  <div id="{{ $carouselID }}" class="carousel slide" style="border-radius: 20px; overflow: hidden;">
     {{/* Indicators (Bootstrap 3 style) */}}
     <ol class="carousel-indicators" style="bottom: -20px; opacity: 0.7; z-index: 10; position: absolute;">
       {{ range $index, $image := $images }}
@@ -62,7 +62,7 @@ EXAMPLES:
     </ol>
     
     {{/* Carousel inner content */}}
-    <div class="carousel-inner" role="listbox" style="position: relative; overflow: hidden; height: {{ $height }};">
+    <div class="carousel-inner" role="listbox" style="position: relative; overflow: hidden; height: {{ $height }}; border-radius: 20px;">
       {{ range $index, $image := $images }}
       <div class="item {{ if eq $index 0 }}active{{ end }}" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: block !important; z-index: {{ if eq $index 0 }}2{{ else }}1{{ end }};">
         <img src="{{ $image.RelPermalink }}" alt="Carousel Image {{ add $index 1 }}" style="width: 100%; height: 100%; object-fit: cover; transition: opacity 500ms ease-in-out; opacity: {{ if eq $index 0 }}1{{ else }}0{{ end }};">
