feat: Add parallax sample page with adjustable starfield and black hole settings

--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -18,6 +18,7 @@
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/RenderPass.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/ShaderPass.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/FXAAShader.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/CopyShader.js"></script>
 
 {{- /* Include the Lensing Effect Script */ -}}
 <script src="{{ "js/lensing-effect.js" | relURL }}" defer></script>
