--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -467,7 +467,8 @@ pre code {
 .intro-header .list-heading h1,
 .intro-header .guides-heading h1,
 .intro-header .ships-heading h1,
-.intro-header .concepts-heading h1 {
+.intro-header .concepts-heading h1,
+.intro-header .development-heading h1 {
   font-size: 4rem !important;
   font-weight: 800;
   margin-bottom: 0.5rem;
@@ -481,7 +482,8 @@ pre code {
 .intro-header .list-heading .list-subheading,
 .intro-header .guides-heading .guides-subheading,
 .intro-header .ships-heading .ships-subheading,
-.intro-header .concepts-heading .concepts-subheading {
+.intro-header .concepts-heading .concepts-subheading,
+.intro-header .development-heading .development-subheading {
   font-size: 2rem !important;
   font-weight: 500;
   font-family: var(--font-family-headings);
@@ -497,7 +499,8 @@ pre code {
 .intro-header .list-heading,
 .intro-header .guides-heading,
 .intro-header .ships-heading,
-.intro-header .concepts-heading {
+.intro-header .concepts-heading,
+.intro-header .development-heading {
   text-align: center !important;
 }
 
@@ -510,7 +513,8 @@ pre code {
   .intro-header .list-heading h1,
   .intro-header .guides-heading h1,
   .intro-header .ships-heading h1,
-  .intro-header .concepts-heading h1 {
+  .intro-header .concepts-heading h1,
+  .intro-header .development-heading h1 {
     font-size: 2.5rem !important;
     line-height: 1.3 !important;
     margin-bottom: 1rem !important;
@@ -524,7 +528,8 @@ pre code {
   .intro-header .list-heading .list-subheading,
   .intro-header .guides-heading .guides-subheading,
   .intro-header .ships-heading .ships-subheading,
-  .intro-header .concepts-heading .concepts-subheading {
+  .intro-header .concepts-heading .concepts-subheading,
+  .intro-header .development-heading .development-subheading {
     font-size: 1.2rem !important;
     line-height: 1.4 !important;
     margin-top: 0.5rem !important;
@@ -556,7 +561,8 @@ pre code {
   .intro-header .list-heading,
   .intro-header .guides-heading,
   .intro-header .ships-heading,
-  .intro-header .concepts-heading {
+  .intro-header .concepts-heading,
+  .intro-header .development-heading {
     padding: 1rem 0 !important;
     display: block !important;
     visibility: visible !important;
